objects/npsp__Form_Template__c.object
<CustomObject>
    <description>A set of fields and default values that users see when entering gifts.</description>
    <fields>
        <fullName>npsp__Description__c</fullName>
        <description>The short description users can enter for a template.</description>
        <inlineHelpText>The short description users can enter for a template.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Format_Version__c</fullName>
        <description>The version of Gift Entry used to create the template. Used for troubleshooting issues if changes are made to the template structure or code.</description>
        <inlineHelpText>The version of Gift Entry used to create this template.</inlineHelpText>
        <label>Format Version</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Template_JSON__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>The sections and fields on this template, along with their order, requirements, and default values. Stored as JSON. Do not edit directly.</description>
        <inlineHelpText>The sections and fields on this template, along with their order, requirements, and default values. Stored as JSON. Do not edit directly.</inlineHelpText>
        <label>Template JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Form Template</label>
    <nameField>
        <label>Form Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>